--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -32,8 +32,8 @@
         #}
         <p class="small">
             This API was built using the
-            <a href="https://github.com/liarco-network/safe-nft-metadata-provider" target="_blank">safe NFT metadata provider</a>
-            by <a href="https://www.liarco.net" target="_blank">Liarco.net</a>.
+            <a href="https://github.com/hashlips-lab/safe-nft-metadata-provider" target="_blank">safe NFT metadata provider</a>
+            by <a href="https://github.com/hashlips-lab" target="_blank">HashLips Lab</a>.
         </p>
     </div>
 {% endblock body %}
